--- a/fgh-sys/src/main/resources/log4j.properties
+++ b/fgh-sys/src/main/resources/log4j.properties
@@ -1,19 +1,12 @@
-log4j.rootLogger=DEBUG,CONSOLE,A
-log4j.addivity.org.apache=false
+log4j.rootLogger=info,console,file
 
-log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.CONSOLE.Threshold=DEBUG
-log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH\:mm\:ss} -%-4r [%t] %-5p  %x - %m%n
-log4j.appender.CONSOLE.Target=System.out
-log4j.appender.CONSOLE.Encoding=UTF-8
-log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=[%-5p] %d %30c %m%n
 
-
-log4j.appender.A=org.apache.log4j.DailyRollingFileAppender  
-log4j.appender.A.File=d:/logs/internet_arch/fgh-sys_
-log4j.appender.A.DatePattern=yyyy-MM-dd'.log'
-log4j.appender.A.layout=org.apache.log4j.PatternLayout  
-log4j.appender.A.layout.ConversionPattern=[FH_sys]  %d{yyyy-MM-dd HH\:mm\:ss} %5p %c{1}\:%L \: %m%n
-
-log4j.logger.org.springframework=WARN
-
+log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.file.DatePattern='-'yyyy-MM-dd
+log4j.appender.file.File=logs/fgh-sys.log
+log4j.appender.file.Append=true
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=[%-5p] %d %30c %m%n
