--- a/fgh-sys-service/src/main/resources/config.properties
+++ b/fgh-sys-service/src/main/resources/config.properties
@@ -2,7 +2,7 @@
 env.defaultEncoding=UTF-8
 
 #jdbc database config properties
-jdbc.url:jdbc:mysql://localhost:3306/interArch?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8 
+jdbc.url:jdbc:mysql://192.168.1.105:3306/interArch?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8 
 jdbc.driverClassName:com.mysql.jdbc.Driver
 jdbc.username:root
 jdbc.password:root
@@ -28,9 +28,9 @@ jdbc.removeAbandonedTimeout:1800
 jdbc.logAbandoned:true
 
 #dubbox config properties
-dubbox.registry.address=zookeeper://localhost:2181
+#dubbox.registry.address=zookeeper://localhost:2181
 
-#dubbox.registry.address=zookeeper://192.168.1.201:2181?backup=192.168.1.202:2181,192.168.1.203:2181
+dubbox.registry.address=zookeeper://192.168.1.201:2181?backup=192.168.1.202:2181,192.168.1.203:2181
 dubbox.application=fgh-sys-service
 dubbox.rest.server=tomcat
 dubbox.rest.port=8888
