--- a/fgh-sys/src/main/resources/config.properties
+++ b/fgh-sys/src/main/resources/config.properties
@@ -2,8 +2,10 @@
 env.defaultEncoding=UTF-8
 
 #jdbc database config properties
-jdbc.url:jdbc:mysql://localhost:3306/interArch?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8 
+jdbc.url:jdbc:mysql://192.168.1.105:3306/interArch?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8 
 jdbc.driverClassName:com.mysql.jdbc.Driver
+#oracle.jdbc.driver.OracleDriver
+#jdbc.url=jdbc:oracle:thin:@//localhost:1521/orcl
 jdbc.username:root
 jdbc.password:root
 jdbc.filters:stat
@@ -33,6 +35,6 @@ upload.maxFileSize=104857600
 upload.tempDir=/WEB-INF/upload/
 
 #dubbox config properties
-dubbox.registry.address=zookeeper://localhost:2181
-#dubbox.registry.address=zookeeper://192.168.1.201:2181?backup=192.168.1.202:2181,192.168.1.203:2181
+#dubbox.registry.address=zookeeper://localhost:2181
+dubbox.registry.address=zookeeper://192.168.1.201:2181?backup=192.168.1.202:2181,192.168.1.203:2181
 dubbox.application=fgh-sys
