--- a/fgh-parent/pom.xml
+++ b/fgh-parent/pom.xml
@@ -422,6 +422,18 @@
 			<artifactId>tomcat-embed-logging-juli</artifactId>
 			<version>8.0.35</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.oracle/ojdbc14 -->
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc14</artifactId>
+			<version>10.2.0.4.0</version>
+		</dependency>
+		<!-- SqlServer -->
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>sqljdbc4</artifactId>
+			<version>4.0</version>
+		</dependency>
 
 	</dependencies>
 </project>
