modify druid configuration

--- a/fgh-sys/src/main/resources/config.properties
+++ b/fgh-sys/src/main/resources/config.properties
@@ -1,20 +1,16 @@
 #Environment config properties
 env.defaultEncoding=UTF-8
 
-#jdbc database config properties
+jdbc database config properties
 jdbc.url:jdbc:mysql://192.168.1.105:3306/interArch?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8 
 jdbc.driverClassName:com.mysql.jdbc.Driver
-#oracle.jdbc.driver.OracleDriver
-#jdbc.url=jdbc:oracle:thin:@//localhost:1521/orcl
-jdbc.username:root
-jdbc.password:root
-jdbc.filters:stat
+
+jdbc.filters:mergeStat
    
-jdbc.maxActive:20
-jdbc.initialSize:1
+jdbc.maxActive:100
+jdbc.initialSize:10
 jdbc.maxWait:60000
 jdbc.minIdle:10
-jdbc.maxIdle:15
    
 jdbc.timeBetweenEvictionRunsMillis:60000
 jdbc.minEvictableIdleTimeMillis:300000
@@ -25,9 +21,16 @@ jdbc.testOnBorrow:false
 jdbc.testOnReturn:false
 
 jdbc.maxOpenPreparedStatements:20
-jdbc.removeAbandoned:true
+jdbc.removeAbandoned:false
 jdbc.removeAbandonedTimeout:1800
 jdbc.logAbandoned:true
+#add param PreparedStatement cache  ##mysql=false
+jdbc.poolPreparedStatements=true
+jdbc.maxPoolPreparedStatementPerConnectionSize=20
+
+#slow sql
+jdbc.slowSqlMillis=10000
+jdbc.logSlowSql=true
 
 #File Upload config
 upload.maxMemSize=102400
@@ -35,6 +38,6 @@ upload.maxFileSize=104857600
 upload.tempDir=/WEB-INF/upload/
 
 #dubbox config properties
-#dubbox.registry.address=zookeeper://localhost:2181
-dubbox.registry.address=zookeeper://192.168.1.201:2181?backup=192.168.1.202:2181,192.168.1.203:2181
+dubbox.registry.address=zookeeper://localhost:2181
+#dubbox.registry.address=zookeeper://192.168.1.201:2181?backup=192.168.1.202:2181,192.168.1.203:2181
 dubbox.application=fgh-sys
