--- a/fgh-parent/pom.xml
+++ b/fgh-parent/pom.xml
@@ -64,7 +64,7 @@
 		<bsf.version>3.1</bsf.version>
 		<sorcerer.version>0.11</sorcerer.version>
 		<curator.version>3.1.0</curator.version>
-		<jedis.version>2.7.3</jedis.version>
+		<jedis.version>2.8.1</jedis.version>
 		<xmemcached.version>2.0.0</xmemcached.version>
 		<cxf.version>3.1.6</cxf.version>
 		<thrift.version>0.9.1</thrift.version>
@@ -439,6 +439,12 @@
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>sqljdbc4</artifactId>
 			<version>4.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/dom4j/dom4j -->
+		<dependency>
+			<groupId>dom4j</groupId>
+			<artifactId>dom4j</artifactId>
+			<version>1.6.1</version>
 		</dependency>
 
 	</dependencies>
