修改为使用JedisSentinelPool

--- a/fgh-common/src/main/resources/redis.properties
+++ b/fgh-common/src/main/resources/redis.properties
@@ -1,6 +1,18 @@
-redis.host=172.16.88.188
+#redis.host=172.16.88.188
 redis.port=6379
 redis.MaxTotal = 1024
 redis.MaxIdle = 200
 redis.MaxWaitMillis=10000
 redis.TestOnBorrow=true
+redis.sentinel.host=172.16.88.169:26379
+redis.sentinel.masterName=mymaster
+
+#redis服务地址,连接ip格式，默认第一个为主服务器,后面的为从服务器,若只设置一个，则为主服务器
+#示例127.0.0.1:6379,127.0.0.1:6380
+#redis.ip=172.16.88.167:6379,172.16.88.169:6379,172.16.88.168:6379
+
+#连接池配置
+#redis.pool.maxActive=60
+#redis.pool.maxIdle=5
+#redis.pool.maxWait=5000
+#redis.pool.testOnBorrow=true
